Now training model crashes with CUDA error

--- a/Static CNN.ipynb
+++ b/Static CNN.ipynb
@@ -50,7 +50,7 @@
     "        #print(data.columns )\n",
     "        data['Activity'] = data['Activity'].map(encode)\n",
     "        # self.data = self.data.reshape(5881, 1, 561)\n",
-    "        _, data = [x for _, x in data.groupby(data['Activity'] < 2)]\n",
+    "        data, _ = [x for _, x in data.groupby(data['Activity'] < 2)]\n",
     "        self.data_y = data['Activity'].values\n",
     "        data = pd.DataFrame(data.drop(['Activity','subject'],axis=1))\n",
     "        self.data_x = np.array(data)\n",
