--- a/Static CNN.ipynb
+++ b/Static CNN.ipynb
@@ -26,12 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity_encode = {\"WALKING\":0,\n",
-    "       \"WALKING_DOWNSTAIRS\":1,\n",
-    "       \"WALKING_UPSTAIRS\":2,\n",
-    "       \"LAYING\":3,\n",
-    "       \"SITTING\":4,\n",
-    "       \"STANDING\":5\n",
+    "activity_encode = {\n",
+    "        \"LAYING\":0,\n",
+    "       \"SITTING\":1,\n",
+    "       \"STANDING\":2,\n",
+    "        \"WALKING\":3,\n",
+    "       \"WALKING_DOWNSTAIRS\":4,\n",
+    "       \"WALKING_UPSTAIRS\":5\n",
     "       }"
    ]
   },
@@ -50,7 +51,7 @@
     "        #print(data.columns )\n",
     "        data['Activity'] = data['Activity'].map(encode)\n",
     "        # self.data = self.data.reshape(5881, 1, 561)\n",
-    "        data, _ = [x for _, x in data.groupby(data['Activity'] < 2)]\n",
+    "        data, _ = [x for _, x in data.groupby(data['Activity'] > 2)]\n",
     "        self.data_y = data['Activity'].values\n",
     "        data = pd.DataFrame(data.drop(['Activity','subject'],axis=1))\n",
     "        self.data_x = np.array(data)\n",
@@ -93,14 +94,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "429"
+       "826"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,23 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Epoch: 10/100..  Training Loss: -69.494..  Validation Loss: -13.975..  Validation Accuracy: 14.000\n",
-      "Epoch: 20/100..  Training Loss: -69.896..  Validation Loss: -13.993..  Validation Accuracy: 14.000\n",
-      "Epoch: 30/100..  Training Loss: -69.974..  Validation Loss: -13.996..  Validation Accuracy: 14.000\n",
-      "Epoch: 40/100..  Training Loss: -69.983..  Validation Loss: -13.999..  Validation Accuracy: 14.000\n",
-      "Epoch: 50/100..  Training Loss: -69.950..  Validation Loss: -13.999..  Validation Accuracy: 14.000\n",
-      "Epoch: 60/100..  Training Loss: -69.997..  Validation Loss: -13.995..  Validation Accuracy: 14.000\n",
-      "Epoch: 70/100..  Training Loss: -69.997..  Validation Loss: -14.000..  Validation Accuracy: 14.000\n",
-      "Epoch: 80/100..  Training Loss: -69.997..  Validation Loss: -14.000..  Validation Accuracy: 14.000\n",
-      "Epoch: 90/100..  Training Loss: -69.997..  Validation Loss: -14.000..  Validation Accuracy: 14.000\n",
-      "Epoch: 100/100..  Training Loss: -69.999..  Validation Loss: -14.000..  Validation Accuracy: 14.000\n"
+      "Epoch: 10/100..  Training Loss: -121.501..  Validation Loss: -24.863..  Validation Accuracy: 25.212\n",
+      "Epoch: 20/100..  Training Loss: -123.260..  Validation Loss: -25.355..  Validation Accuracy: 25.562\n",
+      "Epoch: 30/100..  Training Loss: -125.205..  Validation Loss: -25.356..  Validation Accuracy: 25.438\n",
+      "Epoch: 40/100..  Training Loss: -125.717..  Validation Loss: -25.628..  Validation Accuracy: 25.750\n",
+      "Epoch: 50/100..  Training Loss: -125.639..  Validation Loss: -25.379..  Validation Accuracy: 25.462\n",
+      "Epoch: 60/100..  Training Loss: -126.228..  Validation Loss: -25.675..  Validation Accuracy: 25.736\n",
+      "Epoch: 70/100..  Training Loss: -126.173..  Validation Loss: -25.464..  Validation Accuracy: 25.500\n",
+      "Epoch: 80/100..  Training Loss: -126.489..  Validation Loss: -25.815..  Validation Accuracy: 25.875\n",
+      "Epoch: 90/100..  Training Loss: -126.576..  Validation Loss: -25.720..  Validation Accuracy: 25.719\n",
+      "Epoch: 100/100..  Training Loss: -126.857..  Validation Loss: -25.571..  Validation Accuracy: 25.618\n"
      ]
     }
    ],
@@ -274,19 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "CUDA error: device-side assert triggered",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-2111d7c9572a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Testing Accuracy: {:.3f}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-9-2111d7c9572a>\u001b[0m in \u001b[0;36mtest\u001b[1;34m(model)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtestloader\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m             \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m             \u001b[0mlog_ps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             \u001b[0mtest_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_ps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: CUDA error: device-side assert triggered"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy: 47.083\n"
      ]
     }
    ],
@@ -339,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
