Updated Dynamic CNN
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/Dynamic CNN.ipynb
+++ b/Dynamic CNN.ipynb
@@ -19,7 +19,9 @@
     "from torch.autograd import Variable\n",
     "from torch.nn import Linear, ReLU, Flatten, Sequential, Conv1d, MaxPool1d, Module, LogSoftmax, NLLLoss, Dropout, MSELoss, Softmax\n",
     "from torch.optim import Adam, SGD\n",
-    "from torch.utils.data import Dataset"
+    "from torch.utils.data import Dataset\n",
+    "import torch.nn.functional as F\n",
+    "from torch import flatten"
    ]
   },
   {
@@ -64,9 +66,7 @@
     "    def __init__(self, csv_file, root_dir, encode=None):\n",
     "\n",
     "        data = pd.read_csv(csv_file)\n",
-    "        #print(data.columns )\n",
     "        data['Activity'] = data['Activity'].map(encode)\n",
-    "        # self.data = self.data.reshape(5881, 1, 561)\n",
     "        data, _ = [x for _, x in data.groupby(data['Activity'] > 2)]\n",
     "        self.data_y = data['Activity'].values\n",
     "        data = pd.DataFrame(data.drop(['Activity','subject'],axis=1))\n",
@@ -82,14 +82,6 @@
     "        return len(self.data_x)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # if torch.is_tensor(idx):\n",
-    "        #     idx = idx.tolist()\n",
-    "        # input = self.data_x.iloc[idx, 1:]\n",
-    "        # label = self.data_y.iloc[idx, 1:]\n",
-    "        # #\n",
-    "        # # sample = {'item': item}\n",
-    "        # x = self.data_x[idx]\n",
-    "        # y = self.data_y[idx]\n",
     "        return self.data_x[idx], self.data_y[idx]"
    ],
    "metadata": {
@@ -121,8 +113,8 @@
    "outputs": [],
    "source": [
     "trainloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
-    "validloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
+    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=32, shuffle=True)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)\n",
     "\n",
     "# for inputs, labels in trainloader:\n",
     "#     row = inputs\n",
@@ -138,42 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "class DynamicCNN(Module):\n",
     "    def __init__(self):\n",
     "        super(DynamicCNN, self).__init__()\n",
     "\n",
-    "        self.cnn_layers = Sequential(\n",
-    "            # a\n",
-    "            Conv1d(1, 100, kernel_size=tuple([3])), #stride=tuple([1])),\n",
-    "            ReLU(),\n",
-    "            # Conv1d(100, 100, kernel_size=tuple([3]), stride=tuple([3])),\n",
-    "            # ReLU(inplace=True),\n",
-    "            # b\n",
-    "            MaxPool1d(kernel_size=tuple([3])),# stride=tuple([1])),\n",
-    "            # Flatten\n",
-    "            Flatten()\n",
-    "        )\n",
-    "\n",
-    "        self.linear_layers = Sequential(\n",
-    "            Dropout(0.5),\n",
-    "            Linear(18600, 3),#32*100*561 #56100\n",
-    "            #ReLU(inplace=True),\n",
-    "            Softmax(dim=1)\n",
-    "        )\n",
+    "        self.conv1 = Conv1d(1, 100, kernel_size=tuple([3]))\n",
+    "        self.pool =  MaxPool1d(kernel_size=tuple([3]))\n",
+    "        self.fc = Linear(18600, 3)\n",
+    "        self.dropout = Dropout(0.5)\n",
     "\n",
     "    # Defining the forward pass\n",
     "    def forward(self, x):\n",
-    "        # print(x.shape)\n",
-    "        x = self.cnn_layers(x)\n",
-    "        # print(x.shape)\n",
-    "        # x = x.view(-1, 32*100*561)\n",
-    "        #x = Flatten(x)\n",
-    "        #print(x.shape)\n",
-    "        x = self.linear_layers(x)\n",
-    "        #print(x.shape)\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        #[32, 100, 186]\n",
+    "        x = x.view(-1, 1 * 100 * 186)\n",
+    "        x = self.dropout(F.softmax(self.fc(x), dim=1))\n",
     "        return x"
    ],
    "metadata": {
@@ -194,68 +168,43 @@
     "#device = \"cpu\"\n",
     "def train(model, epochs=5):\n",
     "    step = 10\n",
-    "    \"\"\"\n",
-    "    Function that trains model over the training set, and validates on the validation set\n",
-    "    :param model: model to be trained\n",
-    "    :param epochs: Times training will be done\n",
-    "    :return: trained model\n",
-    "    \"\"\"\n",
-    "    # Only train the classifier parameters, feature parameters are frozen\n",
+    "\n",
     "    optimizer = Adam(model.parameters(), lr=0.0004)\n",
     "    model.to(device)\n",
     "\n",
-    "    '''\n",
-    "    model.train()\n",
-    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        data, target = data.to(device), target.to(device)\n",
-    "        optimizer.zero_grad()\n",
-    "        data = data.view(args.batch_size,  3 * 8 * 8)\n",
-    "        target = target.view(args.batch_size, -1)\n",
-    "        output = model(data)\n",
-    "        loss = F.nll_loss(output, target[0])\n",
-    "    '''\n",
     "    train_losses, valid_losses = [], []\n",
     "    for e in range(epochs):\n",
     "        running_loss = 0\n",
     "        for inputs, labels in trainloader:\n",
     "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
     "            optimizer.zero_grad()\n",
-    "            # print(inputs.shape)\n",
-    "            # #inputs = inputs.view(32,  32* 1* 561)\n",
-    "            #labels = labels.view((32, 3))\n",
     "\n",
     "            log_ps = model(inputs)\n",
-    "            # print(\"after\")\n",
-    "            # print(log_ps.shape)\n",
-    "            # print(labels.max())\n",
-    "            # print(labels.min())\n",
-    "            #loss_train = criterion(log_ps, labels)\n",
     "            loss = criterion(log_ps, labels)\n",
-    "            #loss = criterion(labels,log_ps.view(1, -1))\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            running_loss += loss.item()\n",
     "\n",
     "        else:\n",
+    "            valid_loss = 0\n",
+    "            accuracy = 0\n",
+    "\n",
+    "            # Turn off gradients for validation, saves memory and computations\n",
+    "            with torch.no_grad():\n",
+    "                for inputs, labels in validloader:\n",
+    "                    inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
+    "                    log_ps = model(inputs)\n",
+    "                    valid_loss += criterion(log_ps, labels)\n",
+    "\n",
+    "                    ps = torch.exp(log_ps)\n",
+    "                    top_p, top_class = ps.topk(1, dim=1)\n",
+    "                    equals = top_class == labels.view(*top_class.shape)\n",
+    "                    accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+    "\n",
+    "            train_losses.append(running_loss/len(train_data))\n",
+    "            valid_losses.append(valid_loss/len(valid_data))\n",
+    "\n",
     "            if (e+1) % step == 0:\n",
-    "                valid_loss = 0\n",
-    "                accuracy = 0\n",
-    "\n",
-    "                # Turn off gradients for validation, saves memory and computations\n",
-    "                with torch.no_grad():\n",
-    "                    for inputs, labels in validloader:\n",
-    "                        inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "                        log_ps = model(inputs)\n",
-    "                        valid_loss += criterion(log_ps, labels)\n",
-    "\n",
-    "                        ps = torch.exp(log_ps)\n",
-    "                        top_p, top_class = ps.topk(1, dim=1)\n",
-    "                        equals = top_class == labels.view(*top_class.shape)\n",
-    "                        accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
-    "\n",
-    "                train_losses.append(running_loss/len(train_data))\n",
-    "                valid_losses.append(valid_loss/len(valid_data))\n",
-    "\n",
     "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
     "                      \"Training Loss: {:.3f}.. \".format(running_loss),\n",
     "                      \"Validation Loss: {:.3f}.. \".format(valid_loss),\n",
@@ -271,23 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10/50..  Training Loss: -81.440..  Validation Loss: -81.927..  Validation Accuracy: 82.656\n",
-      "Epoch: 20/50..  Training Loss: -82.428..  Validation Loss: -82.269..  Validation Accuracy: 82.781\n",
-      "Epoch: 30/50..  Training Loss: -82.746..  Validation Loss: -82.768..  Validation Accuracy: 83.000\n",
-      "Epoch: 40/50..  Training Loss: -82.808..  Validation Loss: -82.883..  Validation Accuracy: 83.000\n",
-      "Epoch: 50/50..  Training Loss: -82.826..  Validation Loss: -82.879..  Validation Accuracy: 82.969\n"
+      "Epoch: 10/50..  Training Loss: -25.000..  Validation Loss: -6.062..  Validation Accuracy: 6.375\n",
+      "Epoch: 20/50..  Training Loss: -25.500..  Validation Loss: -6.650..  Validation Accuracy: 7.350\n",
+      "Epoch: 30/50..  Training Loss: -24.375..  Validation Loss: -6.338..  Validation Accuracy: 6.494\n",
+      "Epoch: 40/50..  Training Loss: -25.188..  Validation Loss: -5.688..  Validation Accuracy: 6.981\n",
+      "Epoch: 50/50..  Training Loss: -24.750..  Validation Loss: -6.000..  Validation Accuracy: 6.594\n"
      ]
     }
    ],
    "source": [
     "\n",
     "model = DynamicCNN()\n",
+    "model.train()\n",
     "train(model, epochs=50)"
    ],
    "metadata": {
@@ -299,17 +249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy: 83.000\n"
+      "Testing Accuracy: 13.304\n"
      ]
     }
    ],
    "source": [
+    "model.eval()\n",
     "def test(model):\n",
     "    \"\"\"\n",
     "    Tests model over the testing set\n",
