Cleaner version, issue most probably with data
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/Dynamic CNN.ipynb
+++ b/Dynamic CNN.ipynb
@@ -114,12 +114,7 @@
    "source": [
     "trainloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
     "validloader = torch.utils.data.DataLoader(valid_data, batch_size=32, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)\n",
-    "\n",
-    "# for inputs, labels in trainloader:\n",
-    "#     row = inputs\n",
-    "#     cols = labels\n",
-    "#     break"
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -130,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class DynamicCNN(Module):\n",
@@ -160,85 +155,117 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the valid set: 31 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 31 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 37 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "[10,    50] loss: -0.164\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 31 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "[20,    50] loss: -0.158\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 31 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 37 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "[30,    50] loss: -0.152\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 30 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 35 %\n",
+      "[40,    50] loss: -0.157\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 33 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 31 %\n",
+      "Accuracy of the network on the valid set: 36 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 34 %\n",
+      "Accuracy of the network on the valid set: 32 %\n",
+      "[50,    50] loss: -0.157\n",
+      "Accuracy of the network on the valid set: 35 %\n"
+     ]
+    }
+   ],
    "source": [
     "#NLLL not MSE because\n",
     "criterion = NLLLoss()\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "#device = \"cpu\"\n",
-    "def train(model, epochs=5):\n",
-    "    step = 10\n",
-    "\n",
-    "    optimizer = Adam(model.parameters(), lr=0.0004)\n",
-    "    model.to(device)\n",
-    "\n",
-    "    train_losses, valid_losses = [], []\n",
-    "    for e in range(epochs):\n",
-    "        running_loss = 0\n",
-    "        for inputs, labels in trainloader:\n",
-    "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "            optimizer.zero_grad()\n",
-    "\n",
-    "            log_ps = model(inputs)\n",
-    "            loss = criterion(log_ps, labels)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            running_loss += loss.item()\n",
-    "\n",
-    "        else:\n",
-    "            valid_loss = 0\n",
-    "            accuracy = 0\n",
-    "\n",
-    "            # Turn off gradients for validation, saves memory and computations\n",
-    "            with torch.no_grad():\n",
-    "                for inputs, labels in validloader:\n",
-    "                    inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "                    log_ps = model(inputs)\n",
-    "                    valid_loss += criterion(log_ps, labels)\n",
-    "\n",
-    "                    ps = torch.exp(log_ps)\n",
-    "                    top_p, top_class = ps.topk(1, dim=1)\n",
-    "                    equals = top_class == labels.view(*top_class.shape)\n",
-    "                    accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
-    "\n",
-    "            train_losses.append(running_loss/len(train_data))\n",
-    "            valid_losses.append(valid_loss/len(valid_data))\n",
-    "\n",
-    "            if (e+1) % step == 0:\n",
-    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
-    "                      \"Training Loss: {:.3f}.. \".format(running_loss),\n",
-    "                      \"Validation Loss: {:.3f}.. \".format(valid_loss),\n",
-    "                      \"Validation Accuracy: {:.3f}\".format(accuracy))\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10/50..  Training Loss: -25.000..  Validation Loss: -6.062..  Validation Accuracy: 6.375\n",
-      "Epoch: 20/50..  Training Loss: -25.500..  Validation Loss: -6.650..  Validation Accuracy: 7.350\n",
-      "Epoch: 30/50..  Training Loss: -24.375..  Validation Loss: -6.338..  Validation Accuracy: 6.494\n",
-      "Epoch: 40/50..  Training Loss: -25.188..  Validation Loss: -5.688..  Validation Accuracy: 6.981\n",
-      "Epoch: 50/50..  Training Loss: -24.750..  Validation Loss: -6.000..  Validation Accuracy: 6.594\n"
-     ]
-    }
-   ],
-   "source": [
     "\n",
     "model = DynamicCNN()\n",
-    "model.train()\n",
-    "train(model, epochs=50)"
+    "epochs = 50\n",
+    "\n",
+    "step = 10\n",
+    "optimizer = Adam(model.parameters(), lr=0.0004)\n",
+    "model.to(device)\n",
+    "\n",
+    "train_losses, valid_losses = [], []\n",
+    "for e in range(epochs):\n",
+    "    running_loss = 0\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        # get the inputs; data is a list of [inputs, labels]\n",
+    "        inputs, labels = data\n",
+    "        inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # print statistics\n",
+    "        running_loss += loss.item()\n",
+    "        if (e+1) % step == 0:\n",
+    "            if i % 50 == 49:    # print every 2000 mini-batches\n",
+    "                print('[%d, %5d] loss: %.3f' %\n",
+    "                      (e + 1, i + 1, running_loss / 100))\n",
+    "                running_loss = 0.0\n",
+    "    else:\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        with torch.no_grad():\n",
+    "            for inputs, labels in validloader:\n",
+    "                inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
+    "                outputs = model(inputs)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
+    "        if (e+1) % step == 0:\n",
+    "            print('Accuracy of the network on the valid set: %d %%' % (\n",
+    "                100 * correct / total))"
    ],
    "metadata": {
     "collapsed": false,
@@ -249,40 +276,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy: 13.304\n"
+      "Accuracy of the network on the test set: 35 %\n"
      ]
     }
    ],
    "source": [
-    "model.eval()\n",
-    "def test(model):\n",
-    "    \"\"\"\n",
-    "    Tests model over the testing set\n",
-    "    :param model: to be tested\n",
-    "    \"\"\"\n",
-    "    test_loss = 0\n",
-    "    accuracy = 0\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "model.to(device)\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in testloader:\n",
+    "        inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    # Turn off gradients for testing, saves memory and computations\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, labels in testloader:\n",
-    "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "            log_ps = model(inputs)\n",
-    "            test_loss += criterion(log_ps, labels)\n",
-    "\n",
-    "            ps = torch.exp(log_ps)\n",
-    "            top_p, top_class = ps.topk(1, dim=1)\n",
-    "            equals = top_class == labels.view(*top_class.shape)\n",
-    "            accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
-    "\n",
-    "    print(\"Testing Accuracy: {:.3f}\".format(accuracy))\n",
-    "test(model)\n"
+    "print('Accuracy of the network on the test set: %d %%' % (\n",
+    "    100 * correct / total))\n"
    ],
    "metadata": {
     "collapsed": false,
