Worked on Dynamic parameters
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/Dynamic CNN.ipynb
+++ b/Dynamic CNN.ipynb
@@ -112,9 +112,9 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "trainloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
-    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=32, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)"
+    "trainloader = torch.utils.data.DataLoader(train_data, batch_size=256, shuffle=True)\n",
+    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=256, shuffle=True)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=256, shuffle=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -160,61 +160,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the valid set: 31 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 31 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 37 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "[10,    50] loss: -0.164\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 31 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "[20,    50] loss: -0.158\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 31 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 37 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "[30,    50] loss: -0.152\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 30 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 35 %\n",
-      "[40,    50] loss: -0.157\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 33 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 31 %\n",
-      "Accuracy of the network on the valid set: 36 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 34 %\n",
-      "Accuracy of the network on the valid set: 32 %\n",
-      "[50,    50] loss: -0.157\n",
-      "Accuracy of the network on the valid set: 35 %\n"
+      "Accuracy of the network on the valid set: 56 %\n",
+      "Accuracy of the network on the valid set: 51 %\n",
+      "Accuracy of the network on the valid set: 53 %\n",
+      "Accuracy of the network on the valid set: 54 %\n",
+      "Accuracy of the network on the valid set: 54 %\n"
      ]
     }
    ],
@@ -227,7 +177,7 @@
     "epochs = 50\n",
     "\n",
     "step = 10\n",
-    "optimizer = Adam(model.parameters(), lr=0.0004)\n",
+    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
     "model.to(device)\n",
     "\n",
     "train_losses, valid_losses = [], []\n",
@@ -248,11 +198,10 @@
     "\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        if (e+1) % step == 0:\n",
-    "            if i % 50 == 49:    # print every 2000 mini-batches\n",
-    "                print('[%d, %5d] loss: %.3f' %\n",
-    "                      (e + 1, i + 1, running_loss / 100))\n",
-    "                running_loss = 0.0\n",
+    "        if i % 50 == 49:    # print every 2000 mini-batches\n",
+    "            print('[%d, %5d] loss: %.3f' %\n",
+    "                  (e + 1, i + 1, running_loss / 100))\n",
+    "            running_loss = 0.0\n",
     "    else:\n",
     "        correct = 0\n",
     "        total = 0\n",
@@ -282,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the test set: 35 %\n"
+      "Accuracy of the network on the test set: 53 %\n"
      ]
     }
    ],
@@ -299,7 +248,9 @@
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
     "print('Accuracy of the network on the test set: %d %%' % (\n",
-    "    100 * correct / total))\n"
+    "    100 * correct / total))\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
