latest train/valid/test
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/Dynamic CNN.ipynb
+++ b/Dynamic CNN.ipynb
@@ -112,9 +112,9 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "trainloader = torch.utils.data.DataLoader(train_data, batch_size=256, shuffle=True)\n",
-    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=256, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=256, shuffle=True)"
+    "trainloader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle=True)\n",
+    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=64, shuffle=True)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=64, shuffle=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -160,11 +160,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the valid set: 56 %\n",
-      "Accuracy of the network on the valid set: 51 %\n",
-      "Accuracy of the network on the valid set: 53 %\n",
-      "Accuracy of the network on the valid set: 54 %\n",
-      "Accuracy of the network on the valid set: 54 %\n"
+      "[10,    20] loss: -0.041\n",
+      "[10,    40] loss: -0.026\n",
+      "Accuracy of the network on the valid set: 38 %\n",
+      "[20,    20] loss: -0.036\n",
+      "[20,    40] loss: -0.026\n",
+      "Accuracy of the network on the valid set: 38 %\n",
+      "[30,    20] loss: -0.057\n",
+      "[30,    40] loss: -0.051\n",
+      "Accuracy of the network on the valid set: 57 %\n",
+      "[40,    20] loss: -0.059\n",
+      "[40,    40] loss: -0.039\n",
+      "Accuracy of the network on the valid set: 52 %\n",
+      "[50,    20] loss: -0.048\n",
+      "[50,    40] loss: -0.055\n",
+      "Accuracy of the network on the valid set: 55 %\n"
      ]
     }
    ],
@@ -174,10 +184,10 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = DynamicCNN()\n",
-    "epochs = 50\n",
+    "epochs = 100\n",
     "\n",
     "step = 10\n",
-    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
+    "optimizer = Adam(model.parameters(), lr=0.0004)\n",
     "model.to(device)\n",
     "\n",
     "train_losses, valid_losses = [], []\n",
@@ -198,9 +208,10 @@
     "\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        if i % 50 == 49:    # print every 2000 mini-batches\n",
-    "            print('[%d, %5d] loss: %.3f' %\n",
-    "                  (e + 1, i + 1, running_loss / 100))\n",
+    "        if (e+1) % step == 0:\n",
+    "            if i % 20 == 19:\n",
+    "                print('[%d, %5d] loss: %.3f' %\n",
+    "                      (e + 1, i + 1, running_loss / 20))\n",
     "            running_loss = 0.0\n",
     "    else:\n",
     "        correct = 0\n",
@@ -231,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the test set: 53 %\n"
+      "Accuracy of the network on the test set: 52 %\n"
      ]
     }
    ],
