Going to change some things
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/Dynamic CNN.ipynb
+++ b/Dynamic CNN.ipynb
@@ -160,21 +160,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10,    20] loss: -0.041\n",
-      "[10,    40] loss: -0.026\n",
+      "[10,    20] loss: -0.559\n",
+      "[10,    40] loss: -0.593\n",
+      "Accuracy of the network on the valid set: 43 %\n",
+      "[20,    20] loss: -0.530\n",
+      "[20,    40] loss: -0.406\n",
+      "Accuracy of the network on the valid set: 41 %\n",
+      "[30,    20] loss: -0.750\n",
+      "[30,    40] loss: -0.651\n",
+      "Accuracy of the network on the valid set: 42 %\n",
+      "[40,    20] loss: -0.625\n",
+      "[40,    40] loss: -0.875\n",
+      "Accuracy of the network on the valid set: 42 %\n",
+      "[50,    20] loss: -0.625\n",
+      "[50,    40] loss: -0.812\n",
       "Accuracy of the network on the valid set: 38 %\n",
-      "[20,    20] loss: -0.036\n",
-      "[20,    40] loss: -0.026\n",
-      "Accuracy of the network on the valid set: 38 %\n",
-      "[30,    20] loss: -0.057\n",
-      "[30,    40] loss: -0.051\n",
-      "Accuracy of the network on the valid set: 57 %\n",
-      "[40,    20] loss: -0.059\n",
-      "[40,    40] loss: -0.039\n",
-      "Accuracy of the network on the valid set: 52 %\n",
-      "[50,    20] loss: -0.048\n",
-      "[50,    40] loss: -0.055\n",
-      "Accuracy of the network on the valid set: 55 %\n"
+      "[60,    20] loss: -0.437\n",
+      "[60,    40] loss: -0.781\n",
+      "Accuracy of the network on the valid set: 41 %\n",
+      "[70,    20] loss: -0.656\n",
+      "[70,    40] loss: -0.469\n",
+      "Accuracy of the network on the valid set: 41 %\n",
+      "[80,    20] loss: -0.594\n",
+      "[80,    40] loss: -0.625\n",
+      "Accuracy of the network on the valid set: 39 %\n",
+      "[90,    20] loss: -0.594\n",
+      "[90,    40] loss: -0.750\n",
+      "Accuracy of the network on the valid set: 43 %\n",
+      "[100,    20] loss: -0.812\n",
+      "[100,    40] loss: -0.594\n",
+      "Accuracy of the network on the valid set: 43 %\n"
      ]
     }
    ],
@@ -187,7 +202,7 @@
     "epochs = 100\n",
     "\n",
     "step = 10\n",
-    "optimizer = Adam(model.parameters(), lr=0.0004)\n",
+    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
     "model.to(device)\n",
     "\n",
     "train_losses, valid_losses = [], []\n",
@@ -211,7 +226,7 @@
     "        if (e+1) % step == 0:\n",
     "            if i % 20 == 19:\n",
     "                print('[%d, %5d] loss: %.3f' %\n",
-    "                      (e + 1, i + 1, running_loss / 20))\n",
+    "                      (e + 1, i + 1, running_loss))\n",
     "            running_loss = 0.0\n",
     "    else:\n",
     "        correct = 0\n",
@@ -242,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the test set: 52 %\n"
+      "Accuracy of the network on the test set: 43 %\n"
      ]
     }
    ],
