--- a/Gog_Data_Time.ipynb
+++ b/Gog_Data_Time.ipynb
@@ -66,7 +66,7 @@
     "# Load training and testing\n",
     "path_to_data = \"\" #\"drive/MyDrive/Kaggle/\"\n",
     "\n",
-    "train = pd.read_csv(path_to_data + \"train.csv\")\n",
+    "train = pd.read_csv(path_to_data + \"train - OG.csv\")\n",
     "test = pd.read_csv(path_to_data + \"test.csv\")"
    ],
    "execution_count": 2,
@@ -445,7 +445,10 @@
     "colab": {
      "background_save": true
     },
-    "id": "UJFfDlnUkxzw"
+    "id": "UJFfDlnUkxzw",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "source": [
     "\n",
@@ -494,17 +497,6 @@
      ]
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "GwIpGOygu-JH"
-   },
-   "source": [
-    "# No need to feature extract since SVM doesnt give feature importance"
-   ],
-   "execution_count": 16,
-   "outputs": []
   }
  ]
 }
