--- a/New NN.ipynb
+++ b/New NN.ipynb
@@ -12,7 +12,7 @@
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from torch.nn import Linear, Module, NLLLoss, Dropout, BatchNorm1d\n",
+    "from torch.nn import Linear, Module, Dropout, BatchNorm1d, CrossEntropyLoss\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset\n",
     "import torch.nn.functional as F\n",
@@ -60,14 +60,11 @@
     "\n",
     "        data['Activity'] = data['Activity'].map(activity_encode)\n",
     "        self.data_y = data['Activity'].values\n",
-    "        #data.drop([\"Activity\"] , axis = 1 , inplace = True)\n",
     "\n",
     "        self.data_x = np.array(mat_train)\n",
     "        self.data_x  = torch.from_numpy(self.data_x)\n",
     "        self.data_y = self.data_y.astype(int)\n",
     "        self.data_y = torch.from_numpy(self.data_y)\n",
-    "\n",
-    "        #print(self.data_x.shape , self.data_y.shape)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data_x)\n",
@@ -100,7 +97,7 @@
     }
    ],
    "source": [
-    "train_data = UCI_Dataset(csv_file='train - OG.csv')\n",
+    "train_data = UCI_Dataset(csv_file='train.csv')\n",
     "valid_data = UCI_Dataset(csv_file='valid.csv')\n",
     "test_data = UCI_Dataset(csv_file='test.csv')\n"
    ],
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class Net(Module):\n",
@@ -152,7 +149,7 @@
     "        x = self.dropout(F.relu(self.fc3(x)))\n",
     "        x = self.dropout(F.relu(self.fc4(x)))\n",
     "        x = self.dropout(F.relu(self.fc5(x)))\n",
-    "        x = self.dropout(F.sigmoid(self.fc6(x)))\n",
+    "        x = F.sigmoid(self.fc6(x))\n",
     "        return x"
    ],
    "metadata": {
@@ -164,25 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "Net(\n  (fc1): Linear(in_features=562, out_features=64, bias=True)\n  (fc2): Linear(in_features=64, out_features=64, bias=True)\n  (fc3): Linear(in_features=64, out_features=128, bias=True)\n  (fc4): Linear(in_features=128, out_features=196, bias=True)\n  (fc5): Linear(in_features=196, out_features=32, bias=True)\n  (fc6): Linear(in_features=32, out_features=6, bias=True)\n  (bn1): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n  (dropout): Dropout(p=0.5, inplace=False)\n)"
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "criterion = NLLLoss()\n",
+    "criterion = CrossEntropyLoss()\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = Net()\n",
-    "epochs = 100\n",
+    "epochs = 10\n",
     "\n",
-    "step = epochs//5\n",
+    "step = 2\n",
     "optimizer = Adam(model.parameters(), lr=0.0005)\n",
     "model.to(device)"
    ],
@@ -195,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stderr",
@@ -209,26 +206,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19/99\n",
+      "Epoch 1/9\n",
       "----------\n",
-      "train Loss: -0.0039\n",
-      "val Loss: -0.0041\n",
-      "Epoch 39/99\n",
+      "train Loss: 0.0069\n",
+      "val Loss: 0.0069\n",
+      "Epoch 3/9\n",
       "----------\n",
-      "train Loss: -0.0039\n",
-      "val Loss: -0.0041\n",
-      "Epoch 59/99\n",
+      "train Loss: 0.0058\n",
+      "val Loss: 0.0058\n",
+      "Epoch 5/9\n",
       "----------\n",
-      "train Loss: -0.0040\n",
-      "val Loss: -0.0041\n",
-      "Epoch 79/99\n",
+      "train Loss: 0.0056\n",
+      "val Loss: 0.0058\n",
+      "Epoch 7/9\n",
       "----------\n",
-      "train Loss: -0.0040\n",
-      "val Loss: -0.0041\n",
-      "Epoch 99/99\n",
+      "train Loss: 0.0056\n",
+      "val Loss: 0.0058\n",
+      "Epoch 9/9\n",
       "----------\n",
-      "train Loss: -0.0040\n",
-      "val Loss: -0.0041\n"
+      "train Loss: 0.0055\n",
+      "val Loss: 0.0058\n"
      ]
     }
    ],
@@ -286,13 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the test set: 18 %\n"
+      "Accuracy of the network on the test set: 34 %\n"
      ]
     }
    ],
@@ -309,7 +306,9 @@
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
     "print('Accuracy of the network on the test set: %d %%' % (\n",
-    "    100 * correct / total))\n"
+    "    100 * correct / total))\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
