--- a/Static CNN.ipynb
+++ b/Static CNN.ipynb
@@ -6,17 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import torch\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from tqdm import tqdm\n",
-    "from torch.autograd import Variable\n",
-    "from torch.nn import Linear, ReLU, Flatten, Sequential, Conv1d, MaxPool1d, Module, LogSoftmax, NLLLoss, Dropout, MSELoss, Softmax\n",
-    "from torch.optim import Adam, SGD\n",
+    "from torch.nn import Linear, ReLU, Flatten, Sequential, Conv1d, Module, CrossEntropyLoss, Dropout, Softmax\n",
+    "from torch.optim import Adam\n",
     "from torch.utils.data import Dataset"
    ]
   },
@@ -42,20 +36,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class UCI_Dynamic_Dataset(Dataset):\n",
+    "class UCI_Static_Dataset(Dataset):\n",
     "    \"\"\"UCI dataset.\"\"\"\n",
     "\n",
-    "    def __init__(self, csv_file, root_dir, encode=None):\n",
+    "    def __init__(self, csv_file):\n",
     "\n",
     "        data = pd.read_csv(csv_file)\n",
-    "        #print(data.columns )\n",
-    "        data['Activity'] = data['Activity'].map(encode)\n",
-    "        # self.data = self.data.reshape(5881, 1, 561)\n",
+    "        data['Activity'] = data['Activity'].map(activity_encode)\n",
     "        data, _ = [x for _, x in data.groupby(data['Activity'] > 2)]\n",
     "        self.data_y = data['Activity'].values\n",
     "        data = pd.DataFrame(data.drop(['Activity','subject'],axis=1))\n",
     "        self.data_x = np.array(data)\n",
-    "        self.root_dir = root_dir\n",
     "        # [batch, channels, features]\n",
     "        self.data_x = self.data_x.reshape(len(self.data_x), 1, 561)\n",
     "        self.data_x  = torch.from_numpy(self.data_x)\n",
@@ -66,14 +57,6 @@
     "        return len(self.data_x)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # if torch.is_tensor(idx):\n",
-    "        #     idx = idx.tolist()\n",
-    "        # input = self.data_x.iloc[idx, 1:]\n",
-    "        # label = self.data_y.iloc[idx, 1:]\n",
-    "        # #\n",
-    "        # # sample = {'item': item}\n",
-    "        # x = self.data_x[idx]\n",
-    "        # y = self.data_y[idx]\n",
     "        return self.data_x[idx], self.data_y[idx]"
    ]
   },
@@ -83,9 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = UCI_Dynamic_Dataset(csv_file='train.csv', root_dir='',encode=activity_encode)\n",
-    "valid_data = UCI_Dynamic_Dataset(csv_file='valid.csv', root_dir='',encode=activity_encode)\n",
-    "test_data = UCI_Dynamic_Dataset(csv_file='test.csv', root_dir='',encode=activity_encode)"
+    "train_data = UCI_Static_Dataset(csv_file='train.csv')\n",
+    "valid_data = UCI_Static_Dataset(csv_file='valid.csv')\n",
+    "test_data = UCI_Static_Dataset(csv_file='test.csv')"
    ]
   },
   {
@@ -95,9 +78,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "826"
-      ]
+      "text/plain": "828"
      },
      "execution_count": 5,
      "metadata": {},
@@ -170,80 +151,27 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "StaticCNN(\n  (cnn_layers): Sequential(\n    (0): Conv1d(1, 30, kernel_size=(3,), stride=(1,))\n    (1): ReLU()\n    (2): Conv1d(30, 50, kernel_size=(3,), stride=(1,))\n    (3): ReLU()\n    (4): Conv1d(50, 100, kernel_size=(3,), stride=(1,))\n    (5): ReLU()\n    (6): Flatten(start_dim=1, end_dim=-1)\n  )\n  (linear_layers): Sequential(\n    (0): Dropout(p=0.5, inplace=False)\n    (1): Linear(in_features=55500, out_features=3, bias=True)\n    (2): Softmax(dim=1)\n  )\n)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#NLLL not MSE because\n",
-    "criterion = NLLLoss()\n",
+    "#CrossEntropyLoss not MSE because\n",
+    "criterion = CrossEntropyLoss()\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "#device = \"cpu\"\n",
-    "def train(model, epochs=5):\n",
-    "    step = 10\n",
-    "    \"\"\"\n",
-    "    Function that trains model over the training set, and validates on the validation set\n",
-    "    :param model: model to be trained\n",
-    "    :param epochs: Times training will be done\n",
-    "    :return: trained model\n",
-    "    \"\"\"\n",
-    "    # Only train the classifier parameters, feature parameters are frozen\n",
-    "    optimizer = Adam(model.parameters(), lr=0.0001)\n",
-    "    model.to(device)\n",
     "\n",
-    "    '''\n",
-    "    model.train()\n",
-    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        data, target = data.to(device), target.to(device)\n",
-    "        optimizer.zero_grad()\n",
-    "        data = data.view(args.batch_size,  3 * 8 * 8)\n",
-    "        target = target.view(args.batch_size, -1)\n",
-    "        output = model(data)\n",
-    "        loss = F.nll_loss(output, target[0])\n",
-    "    '''\n",
-    "    train_losses, valid_losses = [], []\n",
-    "    for e in range(epochs):\n",
-    "        running_loss = 0\n",
-    "        for inputs, labels in trainloader:\n",
-    "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "            optimizer.zero_grad()\n",
-    "            # print(inputs.shape)\n",
-    "            # inputs = inputs.view(32,  32* 1* 561)\n",
-    "            # labels = labels.view((32, 3))\n",
+    "model = StaticCNN()\n",
+    "epochs = 10\n",
     "\n",
-    "            log_ps = model(inputs)\n",
-    "            # print(\"after\")\n",
-    "            #print(log_ps.shape)\n",
-    "            #print(labels.max())\n",
-    "            #print(labels.min())\n",
-    "            #loss_train = criterion(log_ps, labels)\n",
-    "            loss = criterion(log_ps, labels)\n",
-    "            #loss = criterion(labels,log_ps.view(1, -1))\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            running_loss += loss.item()\n",
-    "\n",
-    "        else:\n",
-    "            valid_loss = 0\n",
-    "            accuracy = 0\n",
-    "\n",
-    "            # Turn off gradients for validation, saves memory and computations\n",
-    "            with torch.no_grad():\n",
-    "                for inputs, labels in validloader:\n",
-    "                    inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "                    log_ps = model(inputs)\n",
-    "                    valid_loss += criterion(log_ps, labels)\n",
-    "\n",
-    "                    ps = torch.exp(log_ps)\n",
-    "                    top_p, top_class = ps.topk(1, dim=1)\n",
-    "                    equals = top_class == labels.view(*top_class.shape)\n",
-    "                    accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
-    "\n",
-    "            train_losses.append(running_loss/len(train_data))\n",
-    "            valid_losses.append(valid_loss/len(valid_data))\n",
-    "\n",
-    "            if (e+1) % step == 0:\n",
-    "                print(\"Epoch: {}/{}.. \".format(e+1, epochs),\n",
-    "                      \"Training Loss: {:.3f}.. \".format(running_loss),\n",
-    "                      \"Validation Loss: {:.3f}.. \".format(valid_loss),\n",
-    "                      \"Validation Accuracy: {:.3f}\".format(accuracy))"
+    "step = epochs//5\n",
+    "optimizer = Adam(model.parameters(), lr=0.0005)\n",
+    "model.to(device)"
    ]
   },
   {
@@ -255,68 +183,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10/100..  Training Loss: -121.501..  Validation Loss: -24.863..  Validation Accuracy: 25.212\n",
-      "Epoch: 20/100..  Training Loss: -123.260..  Validation Loss: -25.355..  Validation Accuracy: 25.562\n",
-      "Epoch: 30/100..  Training Loss: -125.205..  Validation Loss: -25.356..  Validation Accuracy: 25.438\n",
-      "Epoch: 40/100..  Training Loss: -125.717..  Validation Loss: -25.628..  Validation Accuracy: 25.750\n",
-      "Epoch: 50/100..  Training Loss: -125.639..  Validation Loss: -25.379..  Validation Accuracy: 25.462\n",
-      "Epoch: 60/100..  Training Loss: -126.228..  Validation Loss: -25.675..  Validation Accuracy: 25.736\n",
-      "Epoch: 70/100..  Training Loss: -126.173..  Validation Loss: -25.464..  Validation Accuracy: 25.500\n",
-      "Epoch: 80/100..  Training Loss: -126.489..  Validation Loss: -25.815..  Validation Accuracy: 25.875\n",
-      "Epoch: 90/100..  Training Loss: -126.576..  Validation Loss: -25.720..  Validation Accuracy: 25.719\n",
-      "Epoch: 100/100..  Training Loss: -126.857..  Validation Loss: -25.571..  Validation Accuracy: 25.618\n"
+      "Epoch 1/9\n",
+      "----------\n",
+      "train Loss: 0.0198\n",
+      "val Loss: 0.0209\n",
+      "Epoch 3/9\n",
+      "----------\n",
+      "train Loss: 0.0188\n",
+      "val Loss: 0.0193\n",
+      "Epoch 5/9\n",
+      "----------\n",
+      "train Loss: 0.0185\n",
+      "val Loss: 0.0194\n",
+      "Epoch 7/9\n",
+      "----------\n",
+      "train Loss: 0.0182\n",
+      "val Loss: 0.0191\n",
+      "Epoch 9/9\n",
+      "----------\n",
+      "train Loss: 0.0180\n",
+      "val Loss: 0.0193\n"
      ]
     }
    ],
    "source": [
-    "model = StaticCNN()\n",
-    "train(model, epochs=100)"
+    "data_loaders = {}\n",
+    "data_loaders['train'] = trainloader\n",
+    "data_loaders['val'] = validloader\n",
+    "data_lengths = {\"train\": len(train_data), \"val\": len(valid_data)}\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    if (epoch+1) % step == 0:\n",
+    "        print('Epoch {}/{}'.format(epoch, epochs - 1))\n",
+    "        print('-' * 10)\n",
+    "\n",
+    "    # Each epoch has a training and validation phase\n",
+    "    for phase in ['train', 'val']:\n",
+    "        if phase == 'train':\n",
+    "            model.train(True)  # Set model to training mode\n",
+    "        else:\n",
+    "            model.train(False)  # Set model to evaluate mode\n",
+    "\n",
+    "        running_loss = 0.0\n",
+    "\n",
+    "        # Iterate over data.\n",
+    "        for data in data_loaders[phase]:\n",
+    "            inputs, labels = data\n",
+    "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
+    "            # forward pass to get outputs\n",
+    "            output = model(inputs)\n",
+    "\n",
+    "            # calculate the loss between predicted and target keypoints\n",
+    "            loss = criterion(output, labels)\n",
+    "\n",
+    "            # zero the parameter (weight) gradients\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # backward + optimize only if in training phase\n",
+    "            if phase == 'train':\n",
+    "                loss.backward()\n",
+    "                # update the weights\n",
+    "                optimizer.step()\n",
+    "\n",
+    "            # print loss statistics\n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "        epoch_loss = running_loss / data_lengths[phase]\n",
+    "        if (epoch+1) % step == 0:\n",
+    "            print('{} Loss: {:.4f}'.format(phase, epoch_loss))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy: 47.083\n"
+      "Accuracy of the network on the test set: 94 %\n"
      ]
     }
    ],
    "source": [
-    "def test(model):\n",
-    "    \"\"\"\n",
-    "    Tests model over the testing set\n",
-    "    :param model: to be tested\n",
-    "    \"\"\"\n",
-    "    test_loss = 0\n",
-    "    accuracy = 0\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "model.cpu()\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in testloader:\n",
+    "        inputs, labels = inputs.float(), labels.long()\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    # Turn off gradients for testing, saves memory and computations\n",
-    "    with torch.no_grad():\n",
-    "        for inputs, labels in testloader:\n",
-    "            inputs, labels = inputs.to(device).float(), labels.to(device).long()\n",
-    "            log_ps = model(inputs)\n",
-    "            test_loss += criterion(log_ps, labels)\n",
-    "\n",
-    "            ps = torch.exp(log_ps)\n",
-    "            top_p, top_class = ps.topk(1, dim=1)\n",
-    "            equals = top_class == labels.view(*top_class.shape)\n",
-    "            accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
-    "\n",
-    "    print(\"Testing Accuracy: {:.3f}\".format(accuracy))\n",
-    "test(model)"
+    "print('Accuracy of the network on the test set: %d %%' % (\n",
+    "    100 * correct / total))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
