Started CNN doc
Signed-off-by: Aiden <mw3dbest@gmail.com>

--- a/New NN.ipynb
+++ b/New NN.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "trainloader = torch.utils.data.DataLoader(train_data, batch_size=256, shuffle=True)\n",
     "validloader = torch.utils.data.DataLoader(valid_data, batch_size=256, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=256, shuffle=True)\n"
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=1, shuffle=True)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -208,15 +208,15 @@
      "text": [
       "Epoch 1/9\n",
       "----------\n",
-      "train Loss: 0.0069\n",
-      "val Loss: 0.0069\n",
+      "train Loss: 0.0067\n",
+      "val Loss: 0.0067\n",
       "Epoch 3/9\n",
       "----------\n",
-      "train Loss: 0.0058\n",
-      "val Loss: 0.0058\n",
+      "train Loss: 0.0063\n",
+      "val Loss: 0.0065\n",
       "Epoch 5/9\n",
       "----------\n",
-      "train Loss: 0.0056\n",
+      "train Loss: 0.0058\n",
       "val Loss: 0.0058\n",
       "Epoch 7/9\n",
       "----------\n",
@@ -224,7 +224,7 @@
       "val Loss: 0.0058\n",
       "Epoch 9/9\n",
       "----------\n",
-      "train Loss: 0.0055\n",
+      "train Loss: 0.0056\n",
       "val Loss: 0.0058\n"
      ]
     }
@@ -289,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the test set: 34 %\n"
+      "Accuracy of the network on the test set: 35 %\n"
      ]
     }
    ],
@@ -307,7 +307,66 @@
     "\n",
     "print('Accuracy of the network on the test set: %d %%' % (\n",
     "    100 * correct / total))\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\aiden williams\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\torch\\nn\\functional.py:1709: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WALKING\n",
+      "WALKING\n",
+      "LAYING\n",
+      "STANDING\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in testloader:\n",
+    "        inputs, labels = inputs.float(), labels.long()\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "        key_list = list(activity_encode.keys())\n",
+    "        val_list = list(activity_encode.values())\n",
+    "\n",
+    "        # position = val_list.index(predicted.item())\n",
+    "        # if complete[position] is False:\n",
+    "        #     complete[position] = True\n",
+    "        #     print(key_list[position])\n",
+    "        #     position = val_list.index(labels.item())\n",
+    "        #     print(key_list[position])\n",
+    "        #\n",
+    "        # b = 0\n",
+    "        # for _labels in complete:\n",
+    "        #     if complete[_labels]:\n",
+    "        #         b += 1\n",
+    "        #\n",
+    "        # if b == 5:\n",
+    "        #     print(\"breaking\")\n",
+    "        #     break\n",
     "\n"
    ],
    "metadata": {
