--- a/Static CNN.ipynb
+++ b/Static CNN.ipynb
@@ -97,12 +97,7 @@
    "source": [
     "trainloader = torch.utils.data.DataLoader(train_data, batch_size=32, shuffle=True)\n",
     "validloader = torch.utils.data.DataLoader(valid_data, batch_size=32, shuffle=True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)\n",
-    "\n",
-    "# for inputs, labels in trainloader:\n",
-    "#     row = inputs\n",
-    "#     cols = labels\n",
-    "#     break"
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=32, shuffle=True)"
    ]
   },
   {
