Using Precision and Recall functions from SKLearn

--- a/Gog_Data_Time.ipynb
+++ b/Gog_Data_Time.ipynb
@@ -32,7 +32,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, fbeta_score\n",
+    "from sklearn.metrics import accuracy_score, fbeta_score, precision_score, recall_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import make_scorer\n",
     "# Pretty display for notebooks\n",
